feat: endpoints for working with sensors
* feat: add endpoint for all sensors

* feat: add sensor types

* feat: count lines of code

* fix: comments on interfaces

* fix: sensor types object
