# model/model.go
@@ -21,6 +21,14 @@ type SensorType struct {
 	Unit string `json:"unit"`
 }
 
+type Sensors struct {
+	Sensors []int64 `json:"sensors"`
+}
+
+type SensorTypes struct {
+	SensorTypes []int64 `json:"sensorTypes"`
+}
+
 type Plant struct {
 	ID                 int64       `json:"id"`
 	Description        string      `json:"description"`
